# lambda-benchmark

./: .gitignore  LICENCE  README.md  TODO.md  docker-compose.yml
.github/workflows/: compile-graalvm.yaml  test-java.yaml  test-ruby.yaml  test-rust.yaml  test-typescript.yaml
benchmark/data/: parsed_cloudwatch_logs.csv
benchmark/scripts/: analyse_results.py  download_log_data.py  requirements.txt  results.txt  run_load_test.py
infra/: .gitignore  .terraform.lock.hcl  cloudwatch.tf  dynamodb.tf  example.tfvars  iam.tf  lambda.tf  main.tf  sqs.tf  variables.tf
infra/environment/: .terraform.lock.hcl  dynamodb.tf  lambda.tf  terraform.tf  variables.tf
infra/environments/local/: .terraform.lock.hcl  main.tf  terraform.tf  variables.tf
infra/environments/production/: main.tf
infra/modules/lambda/: cloudwatch.tf  iam.tf  lambda.tf  main.tf  sqs.tf  variables.tf
lambda/graalvm/GraalVMLambda/: README.md  pom.xml  template.yaml
lambda/graalvm/GraalVMLambda/src/assembly/: zip.xml
lambda/java/JavaLambda/: README.md  pom.xml  template.yaml
lambda/python/: README.md  lambda_function.py  requirements.txt
lambda/ruby/: .gitignore  Gemfile  README.md  Rakefile
lambda/ruby/lib/: lambda_function.rb
lambda/ruby/spec/: lambda_function_spec.rb
lambda/rust/: Cargo.toml  README.md
lambda/rust/src/: event_handler.rs  main.rs  schema.rs
lambda/typescript/: README.md  package-lock.json  package.json
lambda/typescript/src/: handler.ts  schema.ts
lambda/typescript/src/tests/: handler.test.ts
schema/: event.json  example.json
(+8 files in other folders)
